<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_me_black_24dp"
        android:title="@string/title_me" />

    <item
        android:id="@+id/navigation_workout"
        android:icon="@drawable/ic_workout_black_24dp"
        android:title="@string/title_workout" />

    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/ic_plan_black_24dp"
        android:title="@string/title_plan" />

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_feed_black_24dp"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

</menu>
